# gha-fail-test

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: tests.yml
src/news/: __init__.py  main.py
tests/: __init__.py  test_main.py  test_news.py
