[tool.poetry]
name = "news"
version = "0.1.0"
description = "Load news items from various RSS feeds and store them to postgres database"
authors = ["Vivek Ramesh <coinhexa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
tox = "^3.25.1"
pre-commit = "^2.20.0"
commitizen = "^2.29.1"
pytest-cov = "^3.0.0"
pytest-sugar = "^0.9.5"
pytest-clarity = "^1.0.1"
flake8 = "^4.0.1"
flake8-bugbear = "^22.7.1"
flake8-docstrings = "^1.6.0"
black = "^22.6.0"
isort = "^5.10.1"
bandit = "^1.7.4"

[tool.poetry.scripts]
news = "news.main:main"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$major.$minor.$patch$prerelease"


# https://coverage.readthedocs.io/en/6.4.2/config.html#syntax
[tool.coverage.run]
# https://coverage.readthedocs.io/en/6.4.2/config.html#run-branch
branch = true
# https://coverage.readthedocs.io/en/6.4.2/config.html#run-source
source = ["news"]

[tool.coverage.report]
# https://coverage.readthedocs.io/en/6.4.2/config.html#report-fail-under
fail_under = 100

[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/black_compatibility.html#using-a-config-file-such-as-isortcfg
# https://pycqa.github.io/isort/docs/configuration/profiles.html
profile = "black"
# https://pycqa.github.io/isort/docs/configuration/options.html#src-paths
src_paths = ["src", "tests"]
# https://pycqa.github.io/isort/docs/configuration/options.html#skip-gitignore
skip_gitignore = true
# https://pycqa.github.io/isort/docs/configuration/options.html#force-single-line
force_single_line = true
# https://pycqa.github.io/isort/docs/configuration/options.html#atomic
atomic = true
# https://pycqa.github.io/isort/docs/configuration/options.html#color-output
color_output = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
